# sapin-noel-federez-2022

./: .gitignore  README.md  explanation.ipynb  main.py  perm.drawio  pyproject.toml
