[tool.poetry]
name = "sapin-noel-federez"
version = "0.1.0"
description = ""
authors = ["Yoann Piétri <me@nanoy.fr>"]
readme = "README.md"
packages = [{include = "sapin_noel_federez"}]

[tool.poetry.dependencies]
python = "^3.10"
perceval-quandela = "^0.7.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
